--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,39 @@
 .ride-item {
     color: black;
-    text-decoration: none; /* no underline */
+    text-decoration: none;
     margin-bottom: 5px;
 }
 
 .ride-item:hover {
-    text-decoration: none; /* no underline */
+    text-decoration: none;
 }
 
 .ride-item h4 {
     margin: 5px 0px 0px 0px;
+}
+
+.location-item {
+    color: black;
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+.location-item:hover {
+    text-decoration: none;
+}
+
+.location-item.create {
+    height: 200px;
+    vertical-align: middle;
+    display: table-cell;
+}
+
+.location-item p {
+    line-height: 12px;
+    color: gray;
+}
+
+.location-item h5 {
+    margin-top: 5px;
+    margin-bottom: 0px;
 }
